# ChangeLog for x11-terms/lilyterm
# Copyright 2012 Gentoo Foundation; Distributed under the GPL v3
# $Header: $

*lilyterm-0.9.9.1 (13 Jun 2012)

  13 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
  +lilyterm-0.9.9.1.ebuild, +metadata.xml, +ChangeLog:
  Initial import based on the bug #334689.