@@ -1,4 +1,6 @@
 DIST lilyterm-0.9.9.1.tar.gz 327748 RMD160 67aef13212cccf49d06088681e8b109a3cfef461 SHA1 b4c472e7b71e02a74e95f34ec823debb7437ec2b SHA256 3954f076b017c382b69a24e8c4afa03ce1449c1557003001d45cfb79171e50aa
+DIST lilyterm-0.9.9.2.tar.gz 328443 RMD160 a4a28afacfa4682cb8d81df5281f6e9fa25f76e1 SHA1 e6ee57fc90c108aa80c27ac31f517f7f65faf06e SHA256 980902102f8d2f233ac1cb01f509dcc595e69a5e9ac783ef2d2e59599a3ca9b6
 EBUILD lilyterm-0.9.9.1.ebuild 1117 RMD160 9d34aa01c5dae2de08f8ffb2e1b26f83ea132997 SHA1 ba81fa9bd4af6b8a61ac8392de48533cd46424be SHA256 dada004104defdd2b09b00d83920f6c91c1bacd05db96d76762bc7b043411d2e
-MISC ChangeLog 300 RMD160 e21d7da8230b95c18c239c73ab9924ca22819047 SHA1 cdce2906472a13c57c5bdc50b7a23af47dccba75 SHA256 2ae3e6eab3ddb0f6e8e2b5f24f4d41c07dbb9be38ff29a0a07bb648ab13edf8d
+EBUILD lilyterm-0.9.9.2.ebuild 1117 RMD160 9d34aa01c5dae2de08f8ffb2e1b26f83ea132997 SHA1 ba81fa9bd4af6b8a61ac8392de48533cd46424be SHA256 dada004104defdd2b09b00d83920f6c91c1bacd05db96d76762bc7b043411d2e
+MISC ChangeLog 434 RMD160 cd6d3819c3f0180d4d3da2ef5598e54fe44df37a SHA1 a6dd8e9657ec2b8a4ebe116af6934f5994b405d8 SHA256 10866742b8d5da56b96d38599b6fe1d255a1d4a86eabfa9ad13747f18537d029
 MISC metadata.xml 316 RMD160 83844f4d1e0a7d7a5a99799a429b60ef4aaa7a62 SHA1 331cfb1a75e36a571e3163a1e757202dbdb6b176 SHA256 fae41e3cdc1fea8f4b0486ac45291f1d564bd5498c1879d0a74fad880d4ef81d
