@@ -2,6 +2,12 @@
 # Copyright 2012 Gentoo Foundation; Distributed under the GPL v3
 # $Header: $
 
+*lilyterm-0.9.9.2 (21 Jun 2012)
+
+  21 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
+  +lilyterm-0.9.9.2.ebuild:
+  Version bump.
+
 *lilyterm-0.9.9.1 (13 Jun 2012)
 
   13 Jun 2012; Dmitry 'daks' Fomenko <daks12@gmail.com>
